test/Fail/Issue4950.err
Issue4950.agda:5.3-4: error: [MissingDefinitions]
The following names are declared but not accompanied by a
definition: B
